{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 192,
  "lineage": "d11a6991-6b0d-a8c8-d502-9afa9e06b6a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backup_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:104044935544:instance/i-082f3b35881e50349",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_s3_profile_dev",
            "id": "i-082f3b35881e50349",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09e485ea9d2c971e0"
              }
            ],
            "primary_network_interface_id": "eni-09e485ea9d2c971e0",
            "private_dns": "ip-10-0-1-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dc2d18bafe3b9c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f955c0d6e0309be3",
            "tags": {
              "Name": "ec2-backup-dev"
            },
            "tags_all": {
              "Name": "ec2-backup-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-019eed8a17fd48635"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "i-082f3b35881e50349",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:internet-gateway/igw-01ac55b730d739204",
            "id": "igw-01ac55b730d739204",
            "owner_id": "104044935544",
            "region": "us-east-1",
            "tags": {
              "Name": "fallback-igw"
            },
            "tags_all": {
              "Name": "fallback-igw"
            },
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:route-table/rtb-09e4053be480a7520",
            "id": "rtb-09e4053be480a7520",
            "owner_id": "104044935544",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ac55b730d739204",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fallback-rt"
            },
            "tags_all": {
              "Name": "fallback-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "rtb-09e4053be480a7520",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e53bbf002d5e22a",
            "region": "us-east-1",
            "route_table_id": "rtb-09e4053be480a7520",
            "subnet_id": "subnet-0f955c0d6e0309be3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fallback",
            "aws_route_table.fallback",
            "aws_subnet.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:security-group/sg-019eed8a17fd48635",
            "description": "Allow SSM Session Manager access (no SSH required)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019eed8a17fd48635",
            "ingress": [],
            "name": "ec2_sg_dev",
            "name_prefix": "",
            "owner_id": "104044935544",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "sg-019eed8a17fd48635",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:security-group/sg-0beab79533f5cd620",
            "description": "Allow HTTPS traffic to VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beab79533f5cd620",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg-dev",
            "name_prefix": "",
            "owner_id": "104044935544",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "sg-0beab79533f5cd620",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:subnet/subnet-0f955c0d6e0309be3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f955c0d6e0309be3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "104044935544",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "MySubnet"
            },
            "tags_all": {
              "Name": "MySubnet"
            },
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "subnet-0f955c0d6e0309be3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fallback",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:vpc/vpc-063ec1af8c7663581",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac3a729419428227",
            "default_route_table_id": "rtb-034c3b9bf64d24991",
            "default_security_group_id": "sg-08a47c298d26893bb",
            "dhcp_options_id": "dopt-01908de0bac619dd0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063ec1af8c7663581",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034c3b9bf64d24991",
            "owner_id": "104044935544",
            "region": "us-east-1",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "vpc-063ec1af8c7663581",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:vpc-endpoint/vpce-05865f71494a28e15",
            "dns_entry": [
              {
                "dns_name": "vpce-05865f71494a28e15-4hr6kwea.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-05865f71494a28e15-4hr6kwea-us-east-1d.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z034756633E6D9QSVWBTV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05865f71494a28e15",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07bd9749fdf18a6a2"
            ],
            "owner_id": "104044935544",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beab79533f5cd620"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.15",
                "subnet_id": "subnet-0f955c0d6e0309be3"
              }
            ],
            "subnet_ids": [
              "subnet-0f955c0d6e0309be3"
            ],
            "tags": {
              "Name": "ec2-messages-endpoint"
            },
            "tags_all": {
              "Name": "ec2-messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "vpce-05865f71494a28e15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:vpc-endpoint/vpce-0cc98c2782a67f8c3",
            "dns_entry": [
              {
                "dns_name": "vpce-0cc98c2782a67f8c3-zmgxx28r.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cc98c2782a67f8c3-zmgxx28r-us-east-1d.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03481333ECHOGBNNTCHT"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z03459562D595UIZX7FVB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cc98c2782a67f8c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06be8625817ccc69b"
            ],
            "owner_id": "104044935544",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beab79533f5cd620"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.252",
                "subnet_id": "subnet-0f955c0d6e0309be3"
              }
            ],
            "subnet_ids": [
              "subnet-0f955c0d6e0309be3"
            ],
            "tags": {
              "Name": "ssm-endpoint"
            },
            "tags_all": {
              "Name": "ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "vpce-0cc98c2782a67f8c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:104044935544:vpc-endpoint/vpce-06eb6db426e5074e1",
            "dns_entry": [
              {
                "dns_name": "vpce-06eb6db426e5074e1-k5pfawaz.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06eb6db426e5074e1-k5pfawaz-us-east-1d.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05335161WX0K1G1KHMDE"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z05392301011VJ1F2Q5CM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06eb6db426e5074e1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09ca8c45ac5879030"
            ],
            "owner_id": "104044935544",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0beab79533f5cd620"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.88",
                "subnet_id": "subnet-0f955c0d6e0309be3"
              }
            ],
            "subnet_ids": [
              "subnet-0f955c0d6e0309be3"
            ],
            "tags": {
              "Name": "ssm-messages-endpoint"
            },
            "tags_all": {
              "Name": "ssm-messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063ec1af8c7663581"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "104044935544",
            "id": "vpce-06eb6db426e5074e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint",
            "aws_subnet.fallback",
            "aws_vpc.fallback",
            "data.aws_vpc.selected",
            "data.aws_vpcs.by_name"
          ]
        }
      ]
    }
  ]
}